--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,27 @@
 .App {
-  text-align: center;
+  min-height: 100vh;
+  background-image: linear-gradient(to top, #d299c2 0%, #fef9d7 100%);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.container {
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  width: 100%;
+  height: 100%;
 }
 
-.App-link {
-  color: #61dafb;
-}
+.OAuthBtn {
+  padding: 10px 20px;
+  border: none;
+  /* background-color: #fef9d7; */
+  background-image: linear-gradient(to top, #d299c2 0%, #fef9d7 45%);
+  box-shadow: 0px 5px 20px rgb(77, 77, 77);
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+.OAuthBtn:hover {
+  /* background-color: #d299c2; */
+  background-image: linear-gradient(to top, #be8ab0 0%, #ebe6c7 45%);
+
 }
